@@ -165,7 +165,26 @@ void CSciEdit::Init(LONG lLanguage)
         Call(SCI_SETTECHNOLOGY, SC_TECHNOLOGY_DIRECTWRITE);
         Call(SCI_SETBUFFEREDDRAW, 0);
     }
-    Call(SCI_SETFONTQUALITY, SC_EFF_QUALITY_LCD_OPTIMIZED);
+    BOOL bSmooth = FALSE;
+    SystemParametersInfo(SPI_GETFONTSMOOTHING, 0, &bSmooth, 0);
+    UINT uSmoothType = 0;
+    if (bSmooth)
+        SystemParametersInfo(SPI_GETFONTSMOOTHINGTYPE, 0, &uSmoothType, 0);
+    WPARAM scintillaFontQuality = SC_EFF_QUALITY_LCD_OPTIMIZED;
+    switch (uSmoothType)
+    {
+    case FE_FONTSMOOTHINGSTANDARD:
+        scintillaFontQuality = SC_EFF_QUALITY_ANTIALIASED;
+        break;
+    case FE_FONTSMOOTHINGCLEARTYPE:
+        scintillaFontQuality = SC_EFF_QUALITY_LCD_OPTIMIZED;
+        break;
+    default:
+        scintillaFontQuality = SC_EFF_QUALITY_NON_ANTIALIASED;
+        break;
+
+    }
+    Call(SCI_SETFONTQUALITY, scintillaFontQuality);
 }
 
 void CSciEdit::Init(const ProjectProperties& props)
